--- a/CSF.CollectionComparers.Tests/CSF.CollectionComparers.Tests.csproj
+++ b/CSF.CollectionComparers.Tests/CSF.CollectionComparers.Tests.csproj
@@ -4,16 +4,19 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <IsTestProject>true</IsTestProject>
     <ReleaseVersion>1.0.0</ReleaseVersion>
-    <NoWarn>1701;1702;NU1603</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="AutoFixture.NUnit3" Version="4.10.0" />
-    <PackageReference Include="AutoFixture.AutoMoq" Version="4.10.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="AutoFixture" Version="4.11.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.11.0" />
+    <PackageReference Include="AutoFixture.NUnit3" Version="4.11.0" />
+    <PackageReference Include="CSF.Reflector" Version="3.0.0" />
+    <PackageReference Include="nunit" Version="3.11.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\CSF.CollectionComparers\CSF.CollectionComparers.csproj" />
   </ItemGroup>
