--- a/CSF.CollectionComparers.Tests/CSF.CollectionComparers.Tests.csproj
+++ b/CSF.CollectionComparers.Tests/CSF.CollectionComparers.Tests.csproj
@@ -3,17 +3,24 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <IsTestProject>true</IsTestProject>
-    <ReleaseVersion>1.0.0</ReleaseVersion>
-    <NoWarn>1701;1702;NU1603</NoWarn>
+    <ReleaseVersion>1.1.0</ReleaseVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.11.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.11.0" />
+    <PackageReference Include="AutoFixture.NUnit3" Version="4.11.0" />
+    <PackageReference Include="coverlet.msbuild" Version="2.8.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="AutoFixture.NUnit3" Version="4.10.0" />
-    <PackageReference Include="AutoFixture.AutoMoq" Version="4.10.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
+    <PackageReference Include="NunitXml.TestLogger" Version="2.1.41" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\CSF.CollectionComparers\CSF.CollectionComparers.csproj" />
   </ItemGroup>
