--- a/CSF.CollectionComparers.Tests/CSF.CollectionComparers.Tests.csproj
+++ b/CSF.CollectionComparers.Tests/CSF.CollectionComparers.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsTestProject>true</IsTestProject>
     <ReleaseVersion>1.1.1</ReleaseVersion>
   </PropertyGroup>
